<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_views">post views</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_update">Update</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="channel_like_name">Like notifications</string>
    <string name="channel_newPost_name">New post notifications</string>
    <string name="channel_pushToken_name" translatable="false">Push Token</string>
    <string name="channel_like_description">Notifications like</string>
    <string name="channel_new_post_description">Notifications new post</string>
    <string name="channel_push_description" >Notifications push</string>
    <string name="notification_user_new_post">User %1$s create new post</string>
    <string name="error_loading">Please, try again later</string>
    <string name="retry_loading">Please, retry</string>
    <string name="empty_posts">Sorry, we haven\'t any posts</string>
    <string name="have_new_posts">New posts</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="edit_text">Enter text of your post, please</string>
    <string name="menu_cancel">Cancel post</string>
    <string name="signout">Sign Out</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="empty_login" >Please, fill in fields</string>
    <string name="server_not_connected" >Sorry, we haven\'t connection with server. Chech internet and try later</string>
    <string name="login_pass_error" >Login or password is wrong. Please, check login and password</string>
</resources>