<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_post"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_default"
    android:visibility="visible">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_margin="@dimen/margin_default"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_avatar_drawable" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <FrameLayout
        android:id="@+id/videoLayout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierTop">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/videoButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_play_arrow_24"
            app:tint="#ffffff" />
    </FrameLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/videoLayout"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer"
        tools:checked="@sample/posts.json/data/likedByMe"
        tools:text="@sample/posts.json/data/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_share"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/footer"
        tools:checked="@sample/posts.json/data/likedByMe"
        tools:text="@sample/posts.json/data/shares" />

    <TextView
        android:id="@+id/view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/footer"
        tools:ignore="TextContrastCheck"
        tools:text="238" />

    <ImageButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_views"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintEnd_toStartOf="@id/view_count"
        app:layout_constraintTop_toTopOf="@id/footer"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>